# pinrag-cli

./: .gitignore  .pinrag-cli.toml  README.md  pyproject.toml
examples/: pinrag-cli.config.toml.sample
src/pinrag_cli/: __init__.py  backend.py  commands.py  config.py  history.py  main.py  mcp_backend.py  memory.py  output.py  repl.py
tests/: __init__.py  test_commands.py  test_config.py  test_history.py  test_mcp_config_parse.py  test_mcp_http_optional.py  test_memory.py  test_output_documents.py
